# c4-rust

./: .gitignore  Cargo.toml  README.md  best.w32  cg.rs  model_fish.pt  nn_string.rs  train.py
src/: closest.rs  collision.rs  connect4.rs  decode_base16k.rs  drone.rs  entity.rs  fish.rs  game.rs  main.rs  mcts.rs  nn.rs  nn_string.rs  node.rs  player.rs  pool.rs  random.rs  sample.rs  scan.rs  ugly.rs  vector.rs  xorshift.rs
